--- a/src/app.css
+++ b/src/app.css
@@ -16,8 +16,23 @@ nav {
   display: flex;
   gap: 30px;
   list-style: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
   color: blue;
+}
+
+.oval {
+  width: 2.113rem;
+  height: 2.113rem;
+  margin: 0 0 0 41.5rem;
+  padding: 0.875rem;
+  border: solid 1px #e8e8e8;
+  border-radius: 50%;
+}
+
+.links li link {
+  text-decoration: none;
 }
